[package]
name = "pallet-aura-style-filter"
authors = [ "Moonsong Labs" ]
description = "The Aura (authority round) consensus engine implemented in the Nimbus framework"
edition = "2021"
version = "0.9.0"

[dependencies]
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
nimbus-primitives = { path = "../../primitives/nimbus-primitives", default-features = false }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [ "frame-support/try-runtime", "nimbus-primitives/try-runtime" ]
