[package]
name = "pallet-author-inherent"
authors = [ "Moonsong Labs" ]
description = "This pallet is the core of the in-runtime portion of Nimbus."
edition = "2021"
license = "GPL-3.0-only"
version = "0.9.0"

[dependencies]
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
nimbus-primitives = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
frame-support-test = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
	"nimbus-primitives/runtime-benchmarks",
]

try-runtime = [ "frame-support/try-runtime", "nimbus-primitives/try-runtime" ]
