[package]
name = "pallet-emergency-para-xcm"
authors = { workspace = true }
description = "Emergency mode for parachain incoming XCM"
edition = "2021"
version = "0.1.0"

[dependencies]

# Local
xcm-primitives = { workspace = true }

# Crates.io
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-message-queue = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true, features = [ "derive" ] }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }

# Polkadot
polkadot-parachain-primitives = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = [ "std" ] }
sp-io = { workspace = true, features = [ "std" ] }
substrate-test-runtime-client = { workspace = true }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"cumulus-pallet-parachain-system/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-message-queue/std",
	"parity-scale-codec/std",
	"polkadot-parachain-primitives/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [ 
	"frame-support/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-message-queue/try-runtime",
]
