[package]
name = "pallet-foreign-asset-creator"
authors = { workspace = true }
edition = "2021"
version = "0.1.0"

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-arithmetic = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
staging-xcm = { workspace = true, optional = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = [ "std" ] }
pallet-assets = { workspace = true, features = [ "std" ] }
sp-core = { workspace = true, features = [ "std" ] }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"staging-xcm/std"
]

runtime-benchmarks = [ "frame-benchmarking", "staging-xcm"]
try-runtime = [ "frame-support/try-runtime" ]