[package]
name = "pallet-relay-storage-roots"
authors = { workspace = true }
description = "Stores the last N relay storage roots"
edition = "2021"
version = "0.1.0"

[dependencies]
cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
environmental = { workspace = true }
log = { workspace = true }
nimbus-primitives = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
serde = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }
hex = { workspace = true }


[dev-dependencies]
derive_more = { workspace = true }
pallet-author-mapping = { workspace = true, features = [ "std" ] }
pallet-balances = { workspace = true, features = [ "std", "insecure_zero_ed" ] }

[features]
default = [ "std" ]
std = [
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"environmental/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"frame-benchmarking",
]
try-runtime = [ "frame-support/try-runtime" ]
