[package]
name = "maintenance-primitives"
authors = { workspace = true }
description = "Primitives for Maintenance Mode pallet"
edition = "2021"
version = "0.1.0"

[dependencies]
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
cumulus-primitives-core = { workspace = true }
pallet-migrations = { workspace = true }

[features]
default = [ "std" ]
std = [
    "cumulus-primitives-core/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
	"sp-runtime/std",
    "pallet-migrations/std"
]
runtime-benchmarks = []

try-runtime = [
    "frame-support/try-runtime",
    "sp-runtime/try-runtime"
]
