[package]
name = "nimbus-primitives"
authors = [ "Moonsong Labs" ]
description = "Primitive types and traits used in the Nimbus consensus framework"
edition = "2021"
version = "0.9.0"

[dependencies]
async-trait = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { version = "2.0.0", default-features = false, features = [ "derive" ] }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [ "frame-benchmarking", "sp-runtime/runtime-benchmarks" ]

try-runtime = [ "frame-support/try-runtime" ]
