[package]
name = "xcm-primitives"
authors = { workspace = true }
description = "Primitives for XCM"
edition = "2021"
version = "0.1.0"

[dependencies]
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }

frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
xcm = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"parity-scale-codec/std",
	"xcm/std"
]
runtime-benchmarks = []
