[package]
name = "moonkit-template"
authors = [ "Anonymous" ]
build = "build.rs"
description = "A Substrate node that demonstrates using the Moonkit framework with instant seal and as a parachain."
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Moonsong-Labs/moonkit/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "moonkit-template"
path = "src/main.rs"

[dependencies]

# Local
nimbus-consensus = { workspace = true }
nimbus-primitives = { workspace = true }
moonkit-template-runtime = { path = "../runtime", features = [ "std" ] }

# Crates.io
clap = { workspace = true, features = [ "derive" ] }
parity-scale-codec = { workspace = true }
derive_more =  { workspace = true }
flume =  { workspace = true }
hex-literal =  { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
futures = { workspace = true }

# Substrate Dependencies
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

## Substrate Client Dependencies
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-network-common = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }

## Substrate Primitive Dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }

# Cumulus dependencies
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-client-parachain-inherent = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }

# Polkadot dependencies
polkadot-cli = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
runtime-benchmarks = [ "moonkit-template-runtime/runtime-benchmarks", "polkadot-service/runtime-benchmarks" ]
try-runtime = [ "moonkit-template-runtime/try-runtime" ]
